--- a/index.html
+++ b/index.html
@@ -22,17 +22,29 @@
     </head>
     <body>
     <main id="main">
+
+      <form>
+        <input id="username" type="text" name="name">
+        <input type="submit" value="Get Repositories">
+      </form>
+
     </main>
+
     <div class="flexbox-container">
+
       <div>
         <h3>Repositories</h3>
-        <div id="repositories"></div>
+        <div id="repositories">
+        </div>
       </div>
+
       <div>
         <h3>Details</h3>
         <div id="details"></div>
       </div>
+
     </div>
+
     <script src="index.js"></script>
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
@@ -40,5 +52,6 @@
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script src="node_modules/sinon/pkg/sinon.js"></script>
     <script>mocha.setup('bdd');</script>
+
   </body>
 </html>
